# qtiocompressor-qt5

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/gzip/: main.cpp
examples/simple/: main.cpp
examples/xml/: main.cpp
examples/ziplist/: main.cpp
src/: qtiocompressor.h
